prepare for sbt 2 by refactoring/minimizing build part 1